--- a/index.html
+++ b/index.html
@@ -482,111 +482,6 @@ videoPlayer.addEventListener('fullscreenchange', function() {
   
 </div>
 
-<!-- ===================== MEMORY CARD GAME ===================== -->
-<div class="spin-lotto-wrapper" style="margin-top:50px;">
-  <h2>🃏 Now You See Me | 3 - Vj Junior | Now You Don't</h2>
-  <div id="memoryBalance" style="margin-bottom:10px;">Points: 0</div>
-  <div id="memoryContainer" style="display:grid; grid-template-columns:repeat(auto-fill, minmax(100px, 1fr)); gap:15px; justify-items:center;"></div>
-  <div id="memoryResult" style="text-align:center; color:#ffdd57; font-size:18px; min-height:24px; margin-top:10px;"></div>
-  <div style="text-align:center; margin-top:10px;">
-    <button id="memoryResetBtn" style="padding:10px 20px; font-size:16px; background:#1dd1a1; color:#fff; border:none; border-radius:8px; cursor:pointer;">Restart Game</button>
-  </div>
-</div>
-
-<style>
-  .memory-card {
-    width: 100px;
-    height: 140px;
-    background: linear-gradient(135deg,#ff6b6b,#feca57);
-    border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 50px;
-    cursor: pointer;
-    transition: transform 0.3s, box-shadow 0.3s;
-    user-select: none;
-    position: relative;
-  }
-  .memory-card.flipped, .memory-card.matched {
-    background: #fff;
-    color: #111;
-    transform: rotateY(180deg);
-  }
-  .memory-card:hover {
-    transform: scale(1.1);
-    box-shadow: 0 8px 20px rgba(255,255,255,0.6);
-  }
-  @media(max-width:480px){
-    .memory-card { width:70px; height:100px; font-size:36px; }
-  }
-</style>
-
-<script>
-const memoryContainer = document.getElementById('memoryContainer');
-const memoryResult = document.getElementById('memoryResult');
-const memoryBalanceEl = document.getElementById('memoryBalance');
-let memoryPoints = 0;
-
-const memoryIcons = ["⭐","🎬","🍿","🎥","💎","🎁","🎯","🎸"];
-let memoryCards = [];
-let memoryFlipped = [];
-let memoryMatched = 0;
-
-function initMemoryGame() {
-    memoryContainer.innerHTML = '';
-    memoryCards = memoryIcons.concat(memoryIcons);
-    memoryCards.sort(()=>Math.random()-0.5);
-    memoryFlipped = [];
-    memoryMatched = 0;
-    memoryResult.textContent = '';
-    memoryCards.forEach(icon => {
-        const card = document.createElement('div');
-        card.classList.add('memory-card');
-        card.textContent = "?";
-        card.dataset.icon = icon;
-        card.addEventListener('click', ()=>flipMemoryCard(card));
-        memoryContainer.appendChild(card);
-    });
-}
-
-function flipMemoryCard(card){
-    if(memoryFlipped.length < 2 && !memoryFlipped.includes(card) && !card.classList.contains('matched')){
-        card.textContent = card.dataset.icon;
-        card.classList.add('flipped');
-        memoryFlipped.push(card);
-        if(memoryFlipped.length === 2){ setTimeout(checkMemoryMatch, 700); }
-    }
-}
-
-function checkMemoryMatch(){
-    const [card1, card2] = memoryFlipped;
-    if(card1.dataset.icon === card2.dataset.icon){
-        card1.classList.add('matched');
-        card2.classList.add('matched');
-        memoryPoints++;
-        memoryBalanceEl.textContent = `Points: ${memoryPoints}`;
-        memoryResult.textContent = "✅ Match! +1 point";
-        memoryMatched += 2;
-        if(memoryMatched === memoryCards.length){
-            memoryResult.textContent = "🎉 All Matched! +Bonus 5 points";
-            memoryPoints += 5;
-            memoryBalanceEl.textContent = `Points: ${memoryPoints}`;
-        }
-    } else {
-        card1.textContent = "?";
-        card2.textContent = "?";
-        card1.classList.remove('flipped');
-        card2.classList.remove('flipped');
-        memoryResult.textContent = "❌ Try Again";
-    }
-    memoryFlipped = [];
-}
-
-document.getElementById('memoryResetBtn').addEventListener('click', ()=>initMemoryGame());
-
-initMemoryGame();
-</script>
 
 <!-- ===================== MOVIE GRID ===================== -->
 <div class="movie-grid-wrapper">
@@ -606,7 +501,160 @@ initMemoryGame();
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<!-- Movie Post Grid with Stylish Play Button -->
+<div id="movie-label-posts"></div>
 
+<style>
+.movie-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.movie-card {
+  background: #111;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 8px 20px rgba(0,0,0,.8);
+  transition: transform .3s ease;
+  width: calc(33.333% - 13.33px);
+}
+
+.movie-card:hover { transform: scale(1.05); }
+
+.poster { position: relative; aspect-ratio: 2/3; overflow: hidden; }
+
+.movie-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: .4s ease-in-out;
+}
+
+.movie-card:hover img { filter: brightness(.5); transform: scale(1.05); }
+
+.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 40px;
+  color: #fff;
+  background: rgba(229,9,20,.9);
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  box-shadow: 0 0 20px #e50914;
+  pointer-events: none;
+}
+
+.movie-title {
+  padding: 10px;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+  background: #e50914;
+  color: #fff;
+}
+
+/* Responsive */
+@media (max-width: 1024px) { .movie-card { width: calc(50% - 10px); } }
+@media (max-width: 768px) { .movie-card { width: 100%; } }
+
+.movie-ad { width: 100%; text-align: center; margin: 20px 0; }
+</style>
+
+<script type="text/javascript">
+function renderMovieLabelPosts(json) {
+  var container = document.getElementById('movie-label-posts');
+  container.innerHTML = '';
+
+  if (!json.feed.entry) return;
+
+  var maxPosts = Math.min(12, json.feed.entry.length);
+  
+  // Ad configuration: width, height, slot
+  var ads = [
+    { w: 300, h: 250, slot: '2359999321' }, // AD 1
+    { w: 336, h: 280, slot: '2608021465' }, // AD 2
+    { w: 728, h: 90,  slot: '3580304316' }  // AD 3
+  ];
+  
+  for (var i = 0; i < maxPosts; i++) {
+    if (i % 3 === 0) var row = document.createElement('div');
+    row.className = 'movie-grid';
+
+    var entry = json.feed.entry[i];
+    var title = entry.title.$t;
+    var url = '';
+    for (var j = 0; j < entry.link.length; j++) {
+      if (entry.link[j].rel === 'alternate') { url = entry.link[j].href; break; }
+    }
+
+    var imgUrl = 'https://via.placeholder.com/300x450?text=No+Image';
+    if (entry.media$thumbnail) imgUrl = entry.media$thumbnail.url.replace('/s72-c/', '/s640/');
+    else if (entry.content) {
+      var match = entry.content.$t.match(/<img[^>]+src="([^">]+)"/);
+      if (match) imgUrl = match[1];
+    }
+
+    var card = document.createElement('div');
+    card.className = 'movie-card';
+    card.innerHTML = `
+      <a href="${url}" title="${title}">
+        <div class="poster">
+          <img src="${imgUrl}" alt="${title}">
+          <div class="play-button">&#9658;</div>
+        </div>
+        <div class="movie-title">${title}</div>
+      </a>
+    `;
+    row.appendChild(card);
+
+    // After 3 posts or last post, append row and ad
+    if ((i + 1) % 3 === 0 || i === maxPosts - 1) {
+      container.appendChild(row);
+
+      var adIndex = Math.floor(i/3) % ads.length; // Rotate ads
+      var adConfig = ads[adIndex];
+
+      var adDiv = document.createElement('div');
+      adDiv.className = 'movie-ad';
+      container.appendChild(adDiv);
+
+      // AdSense script
+      var script1 = document.createElement('script');
+      script1.async = true;
+      script1.src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2269884583846743";
+      script1.crossOrigin = "anonymous";
+      adDiv.appendChild(script1);
+
+      // Ad container
+      var ins = document.createElement('ins');
+      ins.className = 'adsbygoogle';
+      ins.style.display = 'inline-block';
+      ins.style.width = adConfig.w + 'px';
+      ins.style.height = adConfig.h + 'px';
+      ins.setAttribute('data-ad-client','ca-pub-2269884583846743');
+      ins.setAttribute('data-ad-slot',adConfig.slot);
+      adDiv.appendChild(ins);
+
+      // Push ad
+      var script2 = document.createElement('script');
+      script2.text = '(adsbygoogle = window.adsbygoogle || []).push({});';
+      adDiv.appendChild(script2);
+    }
+  }
+}
+</script>
+
+<!-- Blogger JSON Feed -->
+<script src="https://www.marketing2advertising.com/feeds/posts/default/-/movies1000?alt=json-in-script&amp;callback=renderMovieLabelPosts"></script>
+     
 <!-- ===================== MENU ===================== -->
 <nav class="menu-bar">
   <a class="menu-home" href="/">Home</a>
@@ -658,88 +706,15 @@ initMemoryGame();
 </style>
 
 
-<!-- ===================== DARK/LIGHT MODE TOGGLE ===================== -->
-<button id="modeToggle">LIGHT Mode</button>
+<!-- ===================== BUTTON ===================== -->
+<button id="modeToggle">Go To Episode 3</button>
 
 <!-- ===================== JAVASCRIPT ===================== -->
 <script>
-// DARK/LIGHT MODE
-const toggleBtn = document.getElementById('modeToggle');
-toggleBtn.addEventListener('click', () => {
-  document.body.classList.toggle('light-mode');
+document.getElementById('modeToggle').addEventListener('click', function () {
+  window.open('https://www.marketing2advertising.com/p/vj-junior-episode-3-copenhagen-test.html', '_blank');
 });
-
-// BLOGGER SEARCH
-const BLOG_URL = "https://www.marketing2advertising.com/";
-
-function searchPosts(query) {
-  if (!query) return;
-  const script = document.createElement("script");
-  script.src = `${BLOG_URL}/feeds/posts/default?alt=json-in-script&q=${encodeURIComponent(query)}&max-results=30&callback=showSearchResults`;
-  document.body.appendChild(script);
-}
-
-function showSearchResults(json) {
-  const container = document.getElementById("searchResults");
-  container.innerHTML = "";
-  if (!json.feed || !json.feed.entry) {
-    container.innerHTML = `<p style="text-align:center;color:#aaa;">No results found.</p>`;
-    return;
-  }
-  let html = "";
-  json.feed.entry.forEach(entry => {
-    const title = entry.title.$t;
-    let url = "";
-    let img = "https://via.placeholder.com/300x450?text=No+Image";
-    entry.link.forEach(l => { if(l.rel==="alternate") url=l.href; });
-    if(entry.media$thumbnail) img = entry.media$thumbnail.url.replace("/s72-c/", "/s400/");
-    else if(entry.content) {
-      const match = entry.content.$t.match(/<img[^>]+src="([^">]+)"/);
-      if(match) img = match[1];
-    }
-    html += `<div class="result-card">
-      <a href="${url}" target="_blank" rel="noopener noreferrer">
-        <img src="${img}" alt="${title}">
-        <div class="result-title">${title}</div>
-      </a>
-    </div>`;
-  });
-  container.innerHTML = html;
-}
-
-document.getElementById("searchBtn").addEventListener("click", () => {
-  const query = document.getElementById("searchInput").value.trim();
-  searchPosts(query);
-});
-
-document.getElementById("searchInput").addEventListener("keypress", (e) => {
-  if (e.key === "Enter") document.getElementById("searchBtn").click();
-});
-
-// MOVIE GRID
-function renderMovieSlider(json) {
-  const postsContainer = document.getElementById('movie-grid');
-  let postsHTML = '';
-  const maxPosts = 50;
-  for(let i=0;i<Math.min(json.feed.entry.length,maxPosts);i++){
-    const entry=json.feed.entry[i];
-    const title=entry.title.$t;
-    let url='';
-    for(let j=0;j<entry.link.length;j++){if(entry.link[j].rel==='alternate'){url=entry.link[j].href;break;}}
-    let imgUrl='https://via.placeholder.com/300x450?text=No+Image';
-    if(entry.media$thumbnail) imgUrl=entry.media$thumbnail.url.replace('/s72-c/','/s640/');
-    else if(entry.content){const match=entry.content.$t.match(/<img[^>]+src="([^">]+)"/); if(match && match[1]) imgUrl=match[1];}
-    postsHTML+=`<div class="movie-card"><a href="${url}" title="${title}" target="_blank" rel="noopener noreferrer"><div class="poster"><img src="${imgUrl}" alt="${title}"><div class="play-button">&#9658;</div></div><div class="movie-title">${title}</div></a></div>`;
-  }
-  postsContainer.innerHTML = postsHTML;
-}
-
-// Load movies from label "movies1000"
-const script=document.createElement("script");
-script.src=`${BLOG_URL}/feeds/posts/default/-/movies1000?alt=json-in-script&callback=renderMovieSlider&max-results=1000`;
-document.body.appendChild(script);
 </script>
-
 
 </body>
 </html>
