--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
      crossorigin="anonymous"></script>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4W47C6SFHB"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K568T457NH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-4W47C6SFHB');
-</script>
 
+  gtag('config', 'G-K568T457NH');
+</script>
+     
 <meta name="google-site-verification" content="QvAS2CuQyucmtQu49416Ed7EIS-lqCYn_4iI55QNjwo" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
